# DTE-Rates-for-Home-Assistant

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml
custom_components/dte_rates/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  pdf_parser.py  rate_calculator.py  sensor.py  services.yaml  strings.json
custom_components/dte_rates/frontend/: dte-rates-card.js
tests/: conftest.py  test_config_flow.py  test_pdf_parser.py  test_rate_calculator.py  test_sensor.py
